Revert "fix flickering"
This reverts commit b8ddd87fffa8c73908d549b28a7bcaa808f625f7.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,6 @@ body {
   font-family: "Cascadia Code";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(#019875, #33ab5f);
 }
 
 code {
